--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >
             <br />
             <input
-              class="input-border-error"
+              class=""
               id="name"
               name="name"
               type="text"
@@ -43,7 +43,7 @@
             >
             <br />
             <input
-              class="input-border-error"
+              class=""
               id="last-name"
               name="last-name"
               type="text"
@@ -59,7 +59,7 @@
           >
           <br />
           <input
-            class="input-border-error"
+            class=""
             id="email"
             name="email"
             type="email"
@@ -90,7 +90,7 @@
           >
           <br />
           <textarea
-            class="input-border-error"
+            class=""
             id="message-content"
             name="message-content"
           ></textarea>
